--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <webdrivermanager.version>5.1.1</webdrivermanager.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <suiteXmlFile>src/test/resources/alternate.xml</suiteXmlFile>
+        <suiteXmlFile>src/test/java/resources/regression.xml</suiteXmlFile>
         <allure.maven.version>2.10.0</allure.maven.version>
         <allure.testng.version>2.13.9</allure.testng.version>
         <aspectjweaver.version>1.9.6</aspectjweaver.version>
@@ -33,11 +33,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
                     <argLine>
                         -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.9.6/aspectjweaver-1.9.6.jar -Xmx256m
                     </argLine>
+                    <systemPropertyVariables>
+                        <allure.results.directory>${project.build.directory}\allure-results</allure.results.directory>
+                    </systemPropertyVariables>
                     <suiteXmlFiles>
                         <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                     </suiteXmlFiles>
